[package]
name = "rust_mongodb_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.11.0"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]

